--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Benim Sitem</title>
+  <title>buraaks</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Site çalışıyor</h1>
+
+<main>
+  <h1>buraaks</h1>
+  <p>developer · builder · learner</p>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <a href="https://github.com/buraaks">GitHub</a>
+  </section>
+</main>
+
 </body>
 </html>
