Update personal info and project links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Burak | Yazılım Geliştirici</title>
+  <title>Burak Temur | Yazılım Geliştirici</title>
   <meta name="description" content="Burak'ın kişisel portföy ve proje web sitesi.">
 
   <!-- Google Fonts -->
@@ -22,7 +22,7 @@
 <body>
 
   <nav class="navbar">
-    <div class="logo">Burak.</div>
+    <div class="logo">Burak Temur.</div>
     <ul class="nav-links">
       <li><a href="#home">Ana Sayfa</a></li>
       <li><a href="#about">Hakkımda</a></li>
@@ -41,7 +41,7 @@
     <section id="home" class="hero">
       <div class="hero-content">
         <span class="greeting">Merhaba, ben</span>
-        <h1 class="name">Burak</h1>
+        <h1 class="name">Burak Temur</h1>
         <h2 class="title">Yazılım Geliştirici & Teknoloji Meraklısı</h2>
         <p class="description">
           Modern web teknolojileri ve yazılım mimarileri üzerine çalışıyorum.
@@ -53,8 +53,9 @@
         </div>
         <div class="socials">
           <a href="https://github.com/buraaks" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-          <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-          <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/burak-temur-a39432300/" target="_blank" aria-label="LinkedIn"><i
+              class="fab fa-linkedin"></i></a>
+          <a href="https://x.com/buraktem08" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
         </div>
       </div>
       <div class="hero-visual">
@@ -68,7 +69,7 @@
           <div class="card-body">
             <code id="typing-code">
                             <span class="keyword">const</span> <span class="variable">developer</span> = {<br>
-                            &nbsp;&nbsp;name: <span class="string">'Burak'</span>,<br>
+                            &nbsp;&nbsp;name: <span class="string">'Burak Temur'</span>,<br>
                             &nbsp;&nbsp;skills: [<span class="string">'C#'</span>, <span class="string">'.NET'</span>, <span class="string">'React'</span>],<br>
                             &nbsp;&nbsp;hardWorker: <span class="boolean">true</span><br>
                             };
@@ -126,7 +127,8 @@
               <span>SQL</span>
             </div>
             <div class="card-links">
-              <a href="#" class="link-btn"><i class="fab fa-github"></i> Kodu İncele</a>
+              <a href="https://github.com/buraaks/BarnManagement" class="link-btn"><i class="fab fa-github"></i> Kodu
+                İncele</a>
             </div>
           </div>
         </div>
@@ -146,7 +148,8 @@
               <span>Desktop</span>
             </div>
             <div class="card-links">
-              <a href="#" class="link-btn"><i class="fab fa-github"></i> Kodu İncele</a>
+              <a href="https://github.com/buraaks/OverlayPlayer" class="link-btn"><i class="fab fa-github"></i> Kodu
+                İncele</a>
             </div>
           </div>
         </div>
@@ -165,7 +168,8 @@
               <span>JS</span>
             </div>
             <div class="card-links">
-              <a href="#" class="link-btn"><i class="fab fa-github"></i> Kodu İncele</a>
+              <a href="https://github.com/buraaks/buraaks.github.io" class="link-btn"><i class="fab fa-github"></i> Kodu
+                İncele</a>
             </div>
           </div>
         </div>
@@ -177,15 +181,16 @@
       <h2 class="section-title">İletişim</h2>
       <p class="contact-desc">Bir proje fikriniz mi var veya sadece merhaba mı demek istiyorsunuz? Bana her zaman
         ulaşabilirsiniz.</p>
-      <a href="mailto:contact@example.com" class="btn primary huge-btn">
+      <a href="mailto:buraktemur0816@gmail.com" class="btn primary huge-btn">
         <i class="fas fa-envelope"></i> E-posta Gönder
       </a>
 
       <footer class="footer">
-        <p>&copy; 2024 Burak. Tüm hakları saklıdır.</p>
+        <p>&copy; 2024 Burak Temur. Tüm hakları saklıdır.</p>
         <div class="footer-socials">
           <a href="https://github.com/buraaks"><i class="fab fa-github"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/burak-temur-a39432300/"><i class="fab fa-linkedin"></i></a>
+          <a href="https://x.com/buraktem08"><i class="fab fa-twitter"></i></a>
         </div>
       </footer>
     </section>
