--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <div class="app-container">
         <!-- Interactive Background -->
         <div class="background-effects">
+            <div class="particles-layer" id="particles"></div>
             <div class="glow-orb orb-1"></div>
             <div class="glow-orb orb-2"></div>
+            <div class="glow-orb orb-3"></div>
             <div class="grid-overlay"></div>
         </div>
 
