Update: Highly dynamic animated background

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="app-container">
         <!-- Interactive Background -->
         <div class="background-effects">
+            <div class="mouse-light" id="mouse-light"></div>
             <div class="particles-layer" id="particles"></div>
             <div class="glow-orb orb-1"></div>
             <div class="glow-orb orb-2"></div>
