--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
 <body>
     <div class="app-container">
+        <!-- Top Info -->
+        <div class="top-right-info">
+            <div id="clock">00:00:00</div>
+        </div>
+
         <!-- Interactive Background -->
         <div class="background-effects">
             <div class="mouse-light" id="mouse-light"></div>
@@ -22,11 +27,13 @@
             <div class="glow-orb orb-2"></div>
             <div class="glow-orb orb-3"></div>
             <div class="grid-overlay"></div>
+            <div class="noise-overlay"></div>
         </div>
 
         <!-- Main Home Interface -->
         <div class="main-interface" id="mainInterface">
             <div class="hero-section">
+                <div class="greeting" id="greeting">Merhaba</div>
                 <!-- ID added for JS targeting -->
                 <h1 id="hero-title">BURAK TEMUR</h1>
                 <p class="subtitle">Yazılım Geliştirici & Teknoloji Meraklısı</p>
@@ -46,6 +53,11 @@
                 <button class="menu-tile" onclick="openWindow('contact')">
                     <div class="icon-box"><i class="fa-solid fa-paper-plane"></i></div>
                     <span>İletişim</span>
+                    <div class="hover-effect"></div>
+                </button>
+                <button class="menu-tile" onclick="openWindow('skills')">
+                    <div class="icon-box"><i class="fa-solid fa-bolt"></i></div>
+                    <span>Yetenekler</span>
                     <div class="hover-effect"></div>
                 </button>
             </div>
@@ -81,21 +93,33 @@
                 <div class="window-content">
                     <div class="projects-grid">
                         <a href="https://github.com/buraaks/OverlayPlayer" target="_blank" class="project-card">
-                            <h3>Overlay Player</h3>
-                            <p>WPF tabanlı, masaüstü için video/gif overlay aracı.</p>
-                            <div class="tags">
-                                <span>C#</span><span>WPF</span>
+                            <div class="project-image-wrapper">
+                                <img src="images/overlay-player.png" alt="Overlay Player">
+                            </div>
+                            <div class="project-content">
+                                <h3>Overlay Player</h3>
+                                <p>WPF tabanlı, masaüstü için video/gif overlay aracı.</p>
+                                <div class="tags">
+                                    <span>C#</span><span>WPF</span>
+                                </div>
                             </div>
                         </a>
                         <a href="https://github.com/buraaks/BarnManagement" target="_blank" class="project-card">
-                            <h3>Barn Management API</h3>
-                            <p>Sanal çiftlik yönetim simülasyonu için gelişmiş .NET API.</p>
-                            <div class="tags">
-                                <span>.NET 8</span><span>EF Core</span>
+                            <div class="project-image-wrapper">
+                                <img src="images/barn-management.png" alt="Barn Management API">
+                            </div>
+                            <div class="project-content">
+                                <h3>Barn Management API</h3>
+                                <p>Sanal çiftlik yönetim simülasyonu için gelişmiş .NET API.</p>
+                                <div class="tags">
+                                    <span>.NET 8</span><span>EF Core</span>
+                                </div>
                             </div>
                         </a>
                         <div class="project-card empty-card">
-                            <p>More Coming Soon...</p>
+                            <div class="project-content" style="align-items: center; justify-content: center;">
+                                <p>More Coming Soon...</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -123,6 +147,71 @@
                         <span>LinkedIn</span>
                     </a>
                 </div>
+            </div>
+        </div>
+
+        <!-- Skills Window -->
+        <div class="window-overlay" id="window-skills">
+            <div class="window-box">
+                <button class="close-btn" onclick="closeWindow('skills')"><i class="fa-solid fa-xmark"></i></button>
+                <div class="window-header">
+                    <h2>Yetenekler</h2>
+                </div>
+                <div class="window-content">
+                    <div class="skills-container">
+                        <div class="skill-category">
+                            <h3>Frontend</h3>
+                            <div class="skill-tags">
+                                <span>HTML5</span><span>CSS3</span><span>JavaScript</span><span>React</span><span>Next.js</span>
+                            </div>
+                        </div>
+                        <div class="skill-category">
+                            <h3>Backend</h3>
+                            <div class="skill-tags">
+                                <span>C#</span><span>.NET Core</span><span>Node.js</span><span>SQL
+                                    Server</span><span>PostgreSQL</span>
+                            </div>
+                        </div>
+                        <div class="skill-category">
+                            <h3>Tools & Other</h3>
+                            <div class="skill-tags">
+                                <span>Git</span><span>Docker</span><span>Azure</span><span>Agile</span><span>Unity</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Status Card -->
+        <div class="status-card">
+            <div class="status-icon pulsate"></div>
+            <div class="status-text">
+                <span class="status-label">Şu an:</span>
+                <span class="status-value">Kod yazıyor...</span>
+            </div>
+        </div>
+
+        <!-- Tech Marquee -->
+        <div class="marquee-container">
+            <div class="marquee-content">
+                <div class="marquee-item">.NET 8</div>
+                <div class="marquee-item">REACT</div>
+                <div class="marquee-item">C#</div>
+                <div class="marquee-item">AZURE</div>
+                <div class="marquee-item">SQL</div>
+                <div class="marquee-item">NEXT.JS</div>
+                <div class="marquee-item">DOCKER</div>
+                <div class="marquee-item">TYPESCRIPT</div>
+                <!-- Duplicate for seamless loop -->
+                <div class="marquee-item">.NET 8</div>
+                <div class="marquee-item">REACT</div>
+                <div class="marquee-item">C#</div>
+                <div class="marquee-item">AZURE</div>
+                <div class="marquee-item">SQL</div>
+                <div class="marquee-item">NEXT.JS</div>
+                <div class="marquee-item">DOCKER</div>
+                <div class="marquee-item">TYPESCRIPT</div>
             </div>
         </div>
 
