--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
             </div>
 
             <div class="menu-grid">
-                <button class="menu-tile" onclick="openWindow('about')">
+                <button class="menu-tile" onclick="openWindow('about', this)">
                     <div class="icon-box"><i class="fa-solid fa-user-astronaut"></i></div>
                     <span>Hakkımda</span>
                     <div class="hover-effect"></div>
                 </button>
-                <button class="menu-tile" onclick="openWindow('projects')">
+                <button class="menu-tile" onclick="openWindow('projects', this)">
                     <div class="icon-box"><i class="fa-solid fa-code"></i></div>
                     <span>Projeler</span>
                     <div class="hover-effect"></div>
                 </button>
-                <button class="menu-tile" onclick="openWindow('contact')">
+                <button class="menu-tile" onclick="openWindow('contact', this)">
                     <div class="icon-box"><i class="fa-solid fa-paper-plane"></i></div>
                     <span>İletişim</span>
                     <div class="hover-effect"></div>
                 </button>
-                <button class="menu-tile" onclick="openWindow('skills')">
+                <button class="menu-tile" onclick="openWindow('skills', this)">
                     <div class="icon-box"><i class="fa-solid fa-bolt"></i></div>
                     <span>Yetenekler</span>
                     <div class="hover-effect"></div>
