Add Instagram link and improve button animations

--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
                         <i class="fa-brands fa-linkedin"></i>
                         <span>LinkedIn</span>
                     </a>
+                    <a href="https://www.instagram.com/burak._.tmr8/" target="_blank" class="social-link">
+                        <i class="fa-brands fa-instagram"></i>
+                        <span>Instagram</span>
+                    </a>
                 </div>
             </div>
         </div>
